<resources>
    <string name="app_name">Stori</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="first_tutorial_text">Enrich your vocabulary anytime, anywhere.</string>
    <string name="second_tutorial_text">Interesting and fascinating stories for everyone.</string>
    <string name="third_tutorial_text">Discover new languages in the easiest way.</string>
    <string name="the_app_for_enriching_your_vocabulary">The app\nfor enriching\nyour vocabulary</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_connect_with">or Connect with</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="name">Username</string>
    <string name="repeat_password">Repeat password</string>
    <string name="log_in">Log in</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="russian">Russian</string>

    <string-array name="spinnerLanguages">
        <item name="english">English</item>
        <item name="spanish">Spanish</item>
        <item name="french">French</item>
        <item name="german">German</item>
        <item name="italian">Italian</item>
        <item name="russian">Russian</item>
    </string-array>

    <string name="you_speak">You Speak:</string>
    <string name="start_learning">Start Learning</string>
    <string name="would_like_to_learn">Would Like to Learn:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="read_stories">Read stories</string>
    <string name="words_learned">Words learned</string>
    <string name="per_week">Per week</string>
    <string name="account">Account</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="membership_word">Membership</string>
    <string name="get_premium_word">Get Premium</string>
    <string name="about_word_profile_screen">About</string>
    <string name="send_us_your_feedback_profile_screen">Send us your feedback</string>
    <string name="text_to_a_friend_profile_screen">Text to a friend</string>
    <string name="rate_us_on_app_store_profile_screen">Rate us on App Store</string>
    <string name="privacy_policy_profile_screen">Privacy Policy</string>
    <string name="back_word">Back</string>
    <string name="unlimited_words">Unlimited\nWords</string>
    <string name="no_ads_word">No\nAds</string>
    <string name="unlimited_stories">Unlimited\nStories</string>
    <string name="monthly_plan">Monthly\nPlan</string>
    <string name="quarterly_plan">Quarterly\nPlan</string>
    <string name="annual_plan">Annual\nPlan</string>
    <string name="billing_info">*Recurring billing, cancel anytime. If you choose to purchase the Premium App, payment will be charged to your iTunes account, and your account will be charged for renewal within 24 hours prior to the end of the current period. Auto renewal may be turned off at any time by going to your Settings in the iTunes Store after purchase.</string>
    <string name="seven_days_trial">7 days free trial</string>
    <string name="monthly_price">$6.99/mo</string>
    <string name="quarterly_price">$16.99 \n3 months</string>
    <string name="annual_price">$59/yr</string>
    <string name="code">Code</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_code">Enter the code</string>
    <string name="enter_username">Enter name</string>
    <string name="learn_word">Learn</string>
    <string name="vocabulary_word">Vocabulary</string>
    <string name="profile_word">Profile</string>
    <string name="new_word">New</string>
    <string name="popular_stories">Popular Stories</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="stori_suggestion">Stori Suggestion</string>
    <string name="the_wedding">The Wedding</string>
    <string name="let_s_train">Let\'s train</string>
    <string name="letter_header">Header</string>
    <string name="no_results">No results</string>
    <string name="listen">Listen</string>
    <string name="read">Read</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="empty_fragment_text">Seems you don’t have any word right now</string>
    <string name="let_s_learn">Let\'s learn</string>
    <string name="only_one_language_text">Right now you learn only English language</string>
    <string name="add_new_language">Add New Language</string>
    <string name="resume">Resume</string>
    <string name="play">Play</string>
    <string name="plus_5_sec">+ 5 sec</string>
    <string name="minus_5_sec">- 5 sec</string>
    <string name="settings">Settings</string>
    <string name="go_to_vocab">Go to vocabulary</string>
    <string name="add_to_vocabulary">Add to vocabulary</string>
    <string name="native_language">Native Language</string>
    <string name="select_the_correct_translation">Select the correct translation</string>
    <string name="check">Check</string>
    <string name="correct_answer_check_btn_txt">Great, let’s continue</string>
    <string name="wrong_answer_check_btn_txt">Ups, let\'s continue</string>
    <string name="you_can_do_much_better">You can do much better</string>
    <string name="once_again">Once again?</string>
    <string name="not_bad">Not bad</string>
    <string name="great">Great!</string>
    <string name="no_content">No content</string>
</resources>
