<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/stori_bottom_rectangle"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/stori_bottom_white_rectangle" />

    <TextView
        android:id="@+id/stori_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/stori_bottom_rectangle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/cera_pro_bold"
        android:text="@string/the_wedding"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:paddingBottom="20dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/listen_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_listen_grey"
            android:fontFamily="@font/cera_pro_bold"
            android:text="@string/listen"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/read_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_read_orange"
            android:fontFamily="@font/cera_pro_bold"
            android:text="@string/read"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>